# game_of_life_gdi_version

./: Cargo.toml  README.md
src/: main.rs
