[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_Display"
]

[dependencies.winapi]
version = "0.3.9"
features = [
    "wingdi",
]

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"